--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,127 +1,4 @@
-body, h1, h2, ul, li, p, form {
+html, body{
     margin: 0;
     padding: 0;
-    list-style-type: none;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    background-color: #f4f4f4;
-}
-
-header {
-    background-color: #007bff;
-    color: #ffffff;
-    text-align: center;
-    padding: 1rem;
-}
-
-nav ul {
-    display: flex;
-    justify-content: center;
-    padding: 1rem 0;
-}
-
-nav ul li {
-    margin: 0 15px;
-}
-
-nav ul li a {
-    color: #ffffff;
-    text-decoration: none;
-    font-size: 1.2rem;
-}
-
-main {
-    padding: 20px;
-}
-
-.grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-    margin-top: 20px;
-}
-
-.duck-item {
-    background-color: #ffffff;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    padding: 20px;
-    text-align: center;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.duck-item img {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 15px;
-    border-radius: 5px;
-}
-
-.duck-item h2 {
-    margin-bottom: 10px;
-}
-
-.duck-item ul {
-    text-align: left;
-    padding: 0 20px;
-    margin-bottom: 15px;
-}
-
-form {
-    max-width: 500px;
-    margin: 20px auto;
-    background-color: #ffffff;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1); 
-    border-radius: 10px; 
-}
-
-form label {
-    display: block;
-    margin-bottom: 5px;
-}
-
-form input[type="text"],
-form input[type="file"],
-form textarea {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 20px;
-    border-radius: 5px;
-}
-
-form button {
-    background-color: #007bff;
-    color: #ffffff;
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-}
-
-form button:hover {
-    background-color: #0056b3;
-}
-
-footer {
-    background-color: #007bff;
-    color: #ffffff;
-    text-align: center;
-    padding: 1rem;
-    margin-top: 20px;
-}
-
-@media (max-width: 768px) {
-    nav ul {
-        flex-direction: column;
-    }
-
-    nav ul li {
-        margin-bottom: 15px;
-    }
-}
+  }
